# ConversationalSalesAgent

./: .dockerignore  .gitignore  ADKSessionStateImplementation.md  AGENTS.md  ARCHITECTURE_DIAGRAM.md  Architecture.md  B2B_Sales_Agent_Progress_Report.pptx  B2B_Sales_Agent_Townhall.pptx  CLAUDE.md  Dockerfile  GCP_DEPLOY.md  GameDayDemoScript.md  MilestonePlan.md  PROJECT_SUMMARY.md  Plan- UnifiedDatabaseArchitectureforMulti-AgentSystem.md  PlanforGameDay-Group8-Revised.docx  README.md  Sales Scenarios.docx  Sales Scenarios.txt  Scenarios.md  architecture.html  entrypoint.sh  requirements.txt  verify_api_keys.py  verify_integration.py
BootStrapAgent/: AGENTS.md  AGENT_ARCHITECTURE_DIAGRAMS.md  AGENT_COMPARISON_ANALYSIS.md  CLAUDE.md  DEPLOYMENT_OPTIONS_GUIDE.md  README.md  README_ARUN.md  STANDALONE_TESTING_GUIDE.md  TEST_RESULTS.md  main.py  pyproject.toml  requirements.txt  run_tests.py  test_agents.py
BootStrapAgent/bootstrap_agent/: __init__.py  agent.py  requirements.txt
BootStrapAgent/bootstrap_agent/api_tools/: test_tool.py
BootStrapAgent/bootstrap_agent/deploy/: __main__.py
BootStrapAgent/bootstrap_agent/sub_agents/Payment/: payment_agent.py
BootStrapAgent/bootstrap_agent/sub_agents/Service_Fulfillment/: service_fulfillment_agent.py
BootStrapAgent/bootstrap_agent/sub_agents/test/: test_agent.py  test_payment_agent_standalone.py  test_service_agent_standalone.py
BootStrapAgent/bootstrap_agent/utils/: api_utils.py  custom_logger.py  custom_otel.py  deploy_utils.py  gcp_tools.py
CustomerCommunicationAgent/: AGENTS.md  IMPLEMENTATION_SUMMARY.md  README.md  pyproject.toml
CustomerCommunicationAgent/customer_communication_agent/: __init__.py  agent.py  prompts.py
CustomerCommunicationAgent/customer_communication_agent/models/: __init__.py
CustomerCommunicationAgent/customer_communication_agent/tools/: __init__.py  notification_tools.py
CustomerCommunicationAgent/customer_communication_agent/utils/: __init__.py  db.py  logger.py
CustomerCommunicationAgent/data/: notifications.db-shm  notifications.db-wal
DiscoveryAgent/: .env  AGENTS.md  (+7 more)
OrderAgent/: AGENTS.md  IMPLEMENTATION_SUMMARY.md  README.md  pyproject.toml  requirements.txt
OrderAgent/data/: orders.db
OrderAgent/order_agent/: __init__.py  agent.py  prompts.py
OrderAgent/order_agent/models/: __init__.py
OrderAgent/order_agent/tools/: __init__.py  cart_tools.py  order_tools.py
OrderAgent/order_agent/utils/: __init__.py  database.py  logger.py
SuperAgent/: .gitignore  API_QUOTA_GUIDE.md  README.md  RECURSIVE_ROUTER.md  TESTING_GUIDE.md  deploy_cloud.sh  e2e_test.py  pyproject.toml  shutdown_cloud.sh  start_cloud.sh  start_servers.sh  test_all_agents.py  test_final.py  test_integration.py  test_routing.py  test_ui_integration.py
SuperAgent/client/: AGENTS.md  CLAUDE.md  index.html  package-lock.json  package.json  tailwind.config.js
SuperAgent/client/src/: App.jsx  main.jsx
SuperAgent/client/src/components/: CartItem.jsx  CartPanel.jsx  ChatInput.jsx  ChatWindow.jsx  JourneySidebar.jsx  JourneyStep.jsx  MessageBubble.jsx  OrderCard.jsx  PaymentCard.jsx  ProductDetailsCard.jsx  QuoteCard.jsx  ServiceabilityCard.jsx  SuggestionCard.jsx  TypingIndicator.jsx
SuperAgent/client/src/contexts/: ChatContext.jsx
SuperAgent/client/src/hooks/: useChat.js
SuperAgent/client/src/styles/: index.css
SuperAgent/client/src/utils/: agentLabels.js  api.js  pdfExport.js  remoteLog.js  responseFormatters.js  suggestions.js
SuperAgent/data/: sales_agent.db
SuperAgent/data/embeddings/: chroma.sqlite3
SuperAgent/scripts/: migrate_to_unified_db.py
SuperAgent/server/: .env.example  config.py  main.py  requirements.txt  run_scenarios.py
SuperAgent/server/agent/: __init__.py  agent.py  prompts.py
SuperAgent/server/agent/sub_agents/: faq_agent.py  greeting_agent.py  product_agent.py
SuperAgent/server/agent/tools/: sales_tools.py
SuperAgent/server/api/: chat.py  client_log.py  debug.py  session.py
SuperAgent/server/middleware/: auth.py  rate_limiter.py
SuperAgent/server/utils/: logger.py
SuperAgent/super_agent/: __init__.py  agent.py  config.py  prompts.py
SuperAgent/super_agent/sub_agents/: AGENTS.md  CLAUDE.md
SuperAgent/super_agent/sub_agents/customer_communication/: __init__.py  agent.py
SuperAgent/super_agent/sub_agents/discovery/: __init__.py  agent.py
SuperAgent/super_agent/utils/: database.py
(+195 files in other folders)
