[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "customer_communication_agent"
version = "1.0.0"
description = "Automated notification system for B2B telecommunications sales"
readme = "README.md"
requires-python = ">=3.12"
authors = [
    { name = "B2B Sales Agent Team" }
]
keywords = ["adk", "google", "agent", "notifications", "telecommunications"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
]

dependencies = [
    "google-genai>=1.24.1",
    "pydantic>=2.0.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    "pytest-asyncio>=0.21.0",
]

[tool.setuptools]
packages = ["customer_communication_agent"]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
